--- a/hello_world.html
+++ b/hello_world.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>My Web Page</title>
 <script>
-  alert('hello world!');
+  alert('Hello World form HTML using javascript');
 </script>
 </head>
 </html>
